2022-06-06  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl (LoadDesc): Validate device
	description file for essential directives and acceptable values
	as grops(1) does.

2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff, grohtml, grops, grotty]: Update wording of diagnostic
	messages to refer to "motion quantum" rather than "resolution"
	where appropriate.

	* src/devices/grohtml/post-html.cpp
	(html_printer::html_printer):
	* src/devices/grops/ps.cpp (ps_printer::ps_printer):
	* src/devices/grotty/tty.cpp (tty_printer::set_char,
	tty_printer::add_char, tty_printer::end_page):
	* src/roff/troff/env.cpp (line_length, title_length): Do it.

2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Do more "DESC" file validation.
	(LoadDesc): Bomb out gracefully if any of "unitwidth", "res", or
	"sizescale" missing from "DESC" file.  This prevents Perl
	warnings about use of unintialized values, and undoubtedly
	mangled output.

2022-06-04  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Revise diagnostic message
	handling.
	(top level): Add new scalar `progname` to house executable name.
	(Msg): Output messages in format recommended by GNU Coding
	Standards manual.  Identify who's talking (Savannah #52463).
	Rename `lev` scalar to `fatal` since it is used only as a
	Boolean for immediately exiting with failure status.  Report
	diagnostic severity as part of message.
	(Warn, Die): Add new subroutines through which all diagnostics
	are now emitted.
	(top level): Migrate a use of Perl `die` builtin to our `Die`.
	(top level, ToPoints, LoadDownload, LoadDesc, do_x, GetPoints,
	LoadSWF, LoadPDF, LoadStream, BuildStream, ParsePDFHash,
	LoadFont, GetType1, GetChunk, RemapChr, do_N): Migrate `Msg(0,
	...)` calls to `Warn` and `Msg(1, ...)` to `Die`.  Begin
	messages in lowercase (GNU Coding Standards).  Recast a few
	messages for clarity.
